fixing http and finishing swagger in aplication
